# OOCfg

./: .gitignore  AUTHORS  ChangeLog  LICENSE  README.md  requirements.txt  setup.cfg  setup.py  test.py  test_.py
oocfg/: __init__.py  cfg.py
oocfg/config/: exceptions.py  options.py  utils.py
src/: __init__.py  cfg.py
src/config/: exceptions.py  options.py  utils.py
test_file/: config.conf  config.ini  config.yaml  test_.py
