[metadata]
name = oocfg
summary = oocfg
description-file =
    README.md
version=0.0.1
author = lex
author-email = luohai2233@163.com
python-requires = >=3.6
classifier =
    License :: OSI Approved :: MIT Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
exclude=["test.py],
[files]
packages =
    oocfg

[entry_points]


[mypy]
show_column_numbers = true
show_error_context = true
ignore_missing_imports = true
follow_imports = skip
incremental = true
check_untyped_defs = true
warn_unused_ignores = true

[mypy-oslo_config.tests.*]
ignore_errors = true