[metadata]
name = oocfg
summary = oocfg
description-file =
    README.md
version= 0.0.1
author = lex
author-email = luohai2233@163.com
python-requires = >=3.6
classifier =
    License :: OSI Approved :: MIT Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
exclude = test*,*cache*

[files]
packages =
    oocfg
