[metadata]
name = oocfg
summary = oocfg
description = "a tool to read configuration as property"
version= 0.0.2
author = lex
author-email = luohai2233@163.com
python-requires = >=3.6
classifier =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
exclude = test*,*cache*

[files]
packages =
    oocfg
